--- a/.github/workflows/custom-build.yml
+++ b/.github/workflows/custom-build.yml
@@ -10,7 +10,7 @@ jobs:
 
     strategy:
       matrix:
-        fontName: ["IosevkaSS05"]
+        fontName: ["IosevkaCustomSs05"]
 
     steps:
       # Checkout repository into `iosevka` sub directory
