--- a/.github/workflows/custom-build.yml
+++ b/.github/workflows/custom-build.yml
@@ -49,5 +49,5 @@ jobs:
           draft: false
           prerelease: false
           files: |
-            dist/IosevkaCustomSs05/TTF/IosevkaCustomSs05-Regular.ttf
-            dist/IosevkaCustomSs05/TTF/IosevkaCustomSs05-Italic.ttf
+            ./dist/IosevkaCustomSs05/TTF/IosevkaCustomSs05-Regular.ttf
+            ./dist/IosevkaCustomSs05/TTF/IosevkaCustomSs05-Italic.ttf
