--- a/.github/workflows/custom-build.yml
+++ b/.github/workflows/custom-build.yml
@@ -45,7 +45,7 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           path: iosevka
-          tag_name: Nightly_Build
+          tag_name: ${{ steps.get_commit_id.outputs.short_commit_id }}
           # name: v${{ env.VERSION }}
           draft: false
           prerelease: false
