--- a/.github/workflows/custom-build.yml
+++ b/.github/workflows/custom-build.yml
@@ -50,7 +50,7 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           # path: iosevka
-          tag_name: $TAG_NAME
+          tag_name: ${{ TAG_NAME }}
           # name: v${{ env.VERSION }}
           draft: false
           prerelease: false
