* custom-build.yml: use timestamp as tag_name

--- a/.github/workflows/custom-build.yml
+++ b/.github/workflows/custom-build.yml
@@ -42,15 +42,17 @@ jobs:
 
       - name: Set tag name env
         run: |
-          TAG_NAME=${{ github.ref }}
-          echo "TAG_NAME=${TAG_NAME#refs/tags/}" >> $GITHUB_ENV
+          # TAG_NAME=${{ github.ref }}
+          # echo "TAG_NAME=${TAG_NAME#refs/tags/}" >> $GITHUB_ENV
+          echo "::set-env name=NOW::v$(date +'%Y%m%d.%H%M%S')"
           
       - name: Create Release
         id: create_release
         uses: softprops/action-gh-release@v2
         with:
           # path: iosevka
-          tag_name: ${{ TAG_NAME }}
+          # tag_name: ${{ TAG_NAME }}
+          tag: ${{ env.NOW }}
           # name: v${{ env.VERSION }}
           draft: false
           prerelease: false
