--- a/.github/workflows/custom-build.yml
+++ b/.github/workflows/custom-build.yml
@@ -44,7 +44,7 @@ jobs:
         run: |
           # TAG_NAME=${{ github.ref }}
           # echo "TAG_NAME=${TAG_NAME#refs/tags/}" >> $GITHUB_ENV
-          echo "::set-env name=NOW::v$(date +'%Y%m%d.%H%M%S')"
+          echo "NOW=v$(date +'%Y%m%d.%H%M%S')" >> $GITHUB_ENV
           
       - name: Create Release
         id: create_release
