--- a/.github/workflows/custom-build.yml
+++ b/.github/workflows/custom-build.yml
@@ -52,7 +52,7 @@ jobs:
         with:
           # path: iosevka
           # tag_name: ${{ TAG_NAME }}
-          tag: ${{ env.NOW }}
+          tag_name: ${{ env.NOW }}
           # name: v${{ env.VERSION }}
           draft: false
           prerelease: false
