在release note中增加git log

--- a/.github/workflows/custom-build.yml
+++ b/.github/workflows/custom-build.yml
@@ -67,6 +67,8 @@ jobs:
         run: |
           # echo `python width.py -c IosevkaTermSS05NerdFontMono-Regular.ttf` >> $GITHUB_STEP_SUMMARY
           echo 'fontinfo<<EOF' >> $GITHUB_ENV
+          git log -1 --oneline >> $GITHUB_ENV
+          echo '\nIosevkaTermSS05NerdFontMono-Regular.ttf:\n' >> $GITHUB_ENV
           python width.py -c IosevkaTermSS05NerdFontMono-Regular.ttf >> $GITHUB_ENV
           echo 'EOF' >> $GITHUB_ENV
           
