--- a/private-build-plans.toml
+++ b/private-build-plans.toml
@@ -30,11 +30,11 @@ buildTextureFeature = true
     zero = "oval-tall-slashed"
     a = "double-storey-serifless"
     # f = "flat-hook-serifless"
-    i = "serifed"
-    # i = "serifed-flat-tailed"
+    # i = "serifed"
+    i = "serifed-flat-tailed"
     j = "flat-hook-serifed"
-    # l = "serifed-flat-tailed"
-    l = "zshaped"
+    l = "serifed-flat-tailed"
+    # l = "zshaped"
     # FiraCode的r是有个钩子的
     r = "corner-hooked-top-serifed"
     t = "flat-hook-short-neck2"
