--- a/private-build-plans.toml
+++ b/private-build-plans.toml
@@ -30,11 +30,11 @@ buildTextureFeature = true
     zero = "oval-tall-slashed"
     a = "double-storey-serifless"
     # f = "flat-hook-serifless"
-    # i = "serifed"
-    i = "serifed-flat-tailed"
+    # i = "serifed-flat-tailed"
+	i = "serifed"
     j = "flat-hook-serifed"
-    l = "serifed-flat-tailed"
-    # l = "zshaped"
+    # l = "serifed-flat-tailed"
+    l = "zshaped"
     # FiraCode的r是有个钩子的
     r = "corner-hooked-top-serifed"
     t = "flat-hook-short-neck2"
@@ -49,12 +49,6 @@ buildTextureFeature = true
 shape = 450
 menu = 450
 css = 450
-
-# 好像改不了名，那就把Regular的改为450得了
-# [buildPlans.IosevkaTermSs05.weights.Retina]
-# shape = 450
-# menu = 450
-# css = 450
 
 [buildPlans.IosevkaTermSs05.widths.Normal]
 # 默认宽度shape = 500
