Fix ttf line thickness and postion

--- a/.github/workflows/custom-build.yml
+++ b/.github/workflows/custom-build.yml
@@ -69,6 +69,7 @@ jobs:
           echo 'fontinfo<<EOF' >> $GITHUB_ENV
           cd iosevka && git log -1 --oneline >> $GITHUB_ENV
           cd ..
+          python width.py -f 520 IosevkaTermSS05NerdFontMono-Regular.ttf -l -200 -n 30
           echo "" >> $GITHUB_ENV
           echo "IosevkaTermSS05NerdFontMono-Regular.ttf:" >> $GITHUB_ENV
           python width.py -c IosevkaTermSS05NerdFontMono-Regular.ttf >> $GITHUB_ENV
