--- a/.github/workflows/custom-build.yml
+++ b/.github/workflows/custom-build.yml
@@ -64,10 +64,10 @@ jobs:
 
       - name: Merge font
         run: |
-          otfccdump IosevkaTermSS05NerdFontMono-Regular.ttf -o base.otd
-          otfccdump LXGWWenKaiMonoLite-Regular.ttf -o cjk.otd
-          merge-otd base.otd cjk.otd
-          otfccbuild base.otd -O2 -o IosevkaTermSS05NFM+LXGWWenKaiMonoLite-Regular.ttf
+          字体合并补全工具-压缩字库-1.1.0-linux-amd64/otfccdump IosevkaTermSS05NerdFontMono-Regular.ttf -o base.otd
+          字体合并补全工具-压缩字库-1.1.0-linux-amd64/otfccdump LXGWWenKaiMonoLite-Regular.ttf -o cjk.otd
+          字体合并补全工具-压缩字库-1.1.0-linux-amd64/merge-otd base.otd cjk.otd
+          字体合并补全工具-压缩字库-1.1.0-linux-amd64/otfccbuild base.otd -O2 -o IosevkaTermSS05NFM+LXGWWenKaiMonoLite-Regular.ttf
           rm *.otd
 
       - name: Set tag name env
