--- a/.github/workflows/custom-build.yml
+++ b/.github/workflows/custom-build.yml
@@ -87,9 +87,15 @@ jobs:
           cd iosevka && git log -1 --oneline >> $GITHUB_ENV
           cd ..
           python width.py -f 520 IosevkaTermSS05NerdFontMono-Regular.ttf -l -200 -n 30
+          python width.py -f 520 IosevkaTermSS05NFM+LXGWWenKaiMonoLite-Regular.ttf -l -200 -n 30 -a 1040
+          python width.py -m IosevkaTermSS05NFM+LXGWWenKaiMonoLite-Regular.ttf -o 1000 -t 1040
+          python width.py -m IosevkaTermSS05NFM+LXGWWenKaiMonoLite-Regular-w1040.ttf -o 500 -t 520
+          mv IosevkaTermSS05NFM+LXGWWenKaiMonoLite-Regular-w1040-w520.ttf IosevkaTermSS05NFM+LXGWWenKaiMonoLite-Regular.ttf
           echo "" >> $GITHUB_ENV
           echo "IosevkaTermSS05NerdFontMono-Regular.ttf:" >> $GITHUB_ENV
           python width.py -c IosevkaTermSS05NerdFontMono-Regular.ttf >> $GITHUB_ENV
+          echo "IosevkaTermSS05NFM+LXGWWenKaiMonoLite-Regular.ttf:" >> $GITHUB_ENV
+          python width.py -c IosevkaTermSS05NFM+LXGWWenKaiMonoLite-Regular.ttf >> $GITHUB_ENV
           echo 'EOF' >> $GITHUB_ENV
           
           echo ${{ env.fontinfo }}
