--- a/.github/workflows/custom-build.yml
+++ b/.github/workflows/custom-build.yml
@@ -93,6 +93,7 @@ jobs:
           mv IosevkaTermSS05NFM+LXGWWenKaiMonoLite-Regular-w1040-w520.ttf IosevkaTermSS05NFM+LXGWWenKaiMonoLite-Regular.ttf
 
           # Print font info.
+          echo 'fontinfo<<EOF' >> $GITHUB_ENV
           echo "" >> $GITHUB_ENV
           echo "IosevkaTermSS05NerdFontMono-Regular.ttf:" >> $GITHUB_ENV
           python width.py -c IosevkaTermSS05NerdFontMono-Regular.ttf >> $GITHUB_ENV
