--- a/.github/workflows/custom-build.yml
+++ b/.github/workflows/custom-build.yml
@@ -123,7 +123,7 @@ jobs:
           echo "" >> $GITHUB_ENV
           echo "* IosevkaTermSS05NFM+LXGWWenKaiMonoLite-Regular.ttf:" >> $GITHUB_ENV
           python width.py -c IosevkaTermSS05NFM+LXGWWenKaiMonoLite-Regular.ttf >> $GITHUB_ENV
-          python width.py -c $FUSION_ID-Regular.ttf >> $GITHUB_ENV
+          python width.py -c ${FUSION_ID}-Regular.ttf >> $GITHUB_ENV
           echo 'EOF' >> $GITHUB_ENV
 
           echo ${{ env.fontinfo }}
@@ -144,4 +144,4 @@ jobs:
             IosevkaTermSS05NerdFontMono-Regular.ttf
             IosevkaTermSS05NerdFontMono-Italic.ttf
             IosevkaTermSS05NFM+LXGWWenKaiMonoLite-Regular.ttf
-            $FUSION_ID-Regular.ttf
+            ${FUSION_ID}-Regular.ttf
