--- a/.github/workflows/custom-build.yml
+++ b/.github/workflows/custom-build.yml
@@ -157,5 +157,5 @@ jobs:
             iosevka/dist/IosevkaTermSs05/TTF/IosevkaTermSs05-Oblique.ttf
             IosevkaTermSS05NerdFontMono-Regular.ttf
             IosevkaTermSS05NerdFontMono-Italic.ttf
-            ${FILE_MERGED_WFM}-Regular.ttf
+            ${{ env.FILE_MERGED_WFM }}-Regular.ttf
             ${{ env.FUSION_ID }}-Regular.ttf
