--- a/.github/workflows/custom-build.yml
+++ b/.github/workflows/custom-build.yml
@@ -7,9 +7,15 @@ on:
   workflow_dispatch: # 允许手动触发该工作流
 
 env:
+  FILE_MERGED_WFM: IosevkaTermSS05NFM+LXGWWenKaiMonoLite
   FUSION_NAME: IosevkaTermSS05 Nerd Font Mono + LXGW WenKai Mono Lite
   FUSION_ID: IosevkaTermSS05NFM+LXGWWenKaiMonoLiteFF
-  FILE_MERGED_WFM: IosevkaTermSS05NFM+LXGWWenKaiMonoLite
+  FUSION_DEVELOPER: Albert
+  FUSION_DESCRIPTION: The free and open-source font fused with Iosevka & LXGW WenKai
+  FUSION_COPYRIGHT: Copyright 2025 Albert (${{ github.server_url }}/${{ github.repository }})
+  FUSION_LICENSE: "This Font Software is licensed under the SIL Open Font License, Version 1.1. This license is available with a FAQ at: https://openfontlicense.org"
+  IOSEVKA_COPYRIGHT: Copyright 2015-2025, Renzhi Li (aka. Belleve Invis, belleve@typeof.net).
+  LXGW_COPYRIGHT: Copyright 2021-2024 LXGW (https://github.com/lxgw/LxgwWenKai-Lite) Copyright 2020 The Klee Project Authors (https://github.com/fontworks-fonts/Klee)
 
 jobs:
   build:
@@ -39,7 +45,7 @@ jobs:
           sudo apt-get install -y --no-install-recommends ttfautohint
 
       - name: Install deps for Nerd Font Patcher
-        run: sudo apt update && sudo apt install -y fontforge python3-fontforge python3-fonttools p7zip jq
+        run: sudo apt update && sudo apt install -y fontforge python3-fontforge python3-fonttools p7zip jq gftools
 
       - name: Download Nerd Font Patcher
         run: |
@@ -115,6 +121,19 @@ jobs:
             python width.py -m ${FUSION_ID}-${STYLE}-w1040.ttf -o 500 -t 520
             mv ${FUSION_ID}-${STYLE}-w1040-w520.ttf ${FUSION_ID}-${STYLE}.ttf
             python width.py -f 520 ${FUSION_ID}-${STYLE}.ttf -l -200 -n 30 -a 1040
+
+            gftools update-nameids "${FUSION_ID}-${STYLE}.ttf" \
+              --uniqueid "$FUSION_ID-$STYLE-$NOW" \
+              --description "$FUSION_DESCRIPTION" \
+              --designer "$FUSION_DEVELOPER" \
+              --manufacturer "$FUSION_DEVELOPER" \
+              --trademark "$FUSION_NAME" \
+              --version "$NOW" \
+              --copyright "$(echo -e "$IOSEVKA_COPYRIGHT\n$LXGW_COPYRIGHT\n$FUSION_COPYRIGHT")" \
+              --license "$FUSION_LICENSE" \
+              --urlvendor "https://github.com/georgealbert/iosevka" \
+              --urldesigner "https://www.albertzhou.net" \
+              --urllicense "https://openfontlicense.org"
           done
 
       - name: Generate artifact info
@@ -124,15 +143,15 @@ jobs:
           cd ..
 
           # Print font info.
-          echo "" >> $GITHUB_ENV
-          echo "* IosevkaTermSS05NerdFontMono-Regular.ttf:" >> $GITHUB_ENV
-          python width.py -c IosevkaTermSS05NerdFontMono-Regular.ttf >> $GITHUB_ENV
-
-          echo "" >> $GITHUB_ENV
-          echo "* ${FILE_MERGED_WFM}-Regular.ttf:" >> $GITHUB_ENV
-          python width.py -c ${FILE_MERGED_WFM}-Regular.ttf >> $GITHUB_ENV
-
           for STYLE in "Regular"; do
+            echo "" >> $GITHUB_ENV
+            echo "* IosevkaTermSS05NerdFontMono-${STYLE}.ttf:" >> $GITHUB_ENV
+            python width.py -c IosevkaTermSS05NerdFontMono-${STYLE}.ttf >> $GITHUB_ENV
+
+            echo "" >> $GITHUB_ENV
+            echo "* ${FILE_MERGED_WFM}-${STYLE}.ttf:" >> $GITHUB_ENV
+            python width.py -c ${FILE_MERGED_WFM}-${STYLE}.ttf >> $GITHUB_ENV
+
             echo "" >> $GITHUB_ENV
             echo "* ${FUSION_ID}-${STYLE}.ttf:" >> $GITHUB_ENV
             python width.py -c ${FUSION_ID}-${STYLE}.ttf >> $GITHUB_ENV
@@ -154,7 +173,6 @@ jobs:
           files: |
             iosevka/dist/IosevkaTermSs05/TTF/IosevkaTermSs05-Regular.ttf
             iosevka/dist/IosevkaTermSs05/TTF/IosevkaTermSs05-Italic.ttf
-            iosevka/dist/IosevkaTermSs05/TTF/IosevkaTermSs05-Oblique.ttf
             IosevkaTermSS05NerdFontMono-Regular.ttf
             IosevkaTermSS05NerdFontMono-Italic.ttf
             ${{ env.FILE_MERGED_WFM }}-Regular.ttf
