修改workflow的报错

--- a/.github/workflows/custom-build.yml
+++ b/.github/workflows/custom-build.yml
@@ -111,20 +111,19 @@ jobs:
           python width.py -f 520 IosevkaTermSS05NerdFontMono-Regular.ttf -l -200 -n 30
 
           # Fix merged font.
-          python width.py -m ${FILE_MERGED_WFM}-Regular.ttf -o 1000 -t 1040
-          python width.py -m ${FILE_MERGED_WFM}-Regular-w1040.ttf -o 500 -t 520
+          python width.py -m ${FILE_MERGED_WFM}-Regular.ttf -o 1000 -t 1040 > /dev/null
+          python width.py -m ${FILE_MERGED_WFM}-Regular-w1040.ttf -o 500 -t 520 > /dev/null
           mv ${FILE_MERGED_WFM}-Regular-w1040-w520.ttf ${FILE_MERGED_WFM}-Regular.ttf
           python width.py -f 520 ${FILE_MERGED_WFM}-Regular.ttf -l -200 -n 30 -a 1040
 
           for STYLE in "Regular"; do
-            python width.py -m ${FUSION_ID}-${STYLE}.ttf -o 1000 -t 1040
-            python width.py -m ${FUSION_ID}-${STYLE}-w1040.ttf -o 500 -t 520
+            python width.py -m ${FUSION_ID}-${STYLE}.ttf -o 1000 -t 1040 > /dev/null
+            python width.py -m ${FUSION_ID}-${STYLE}-w1040.ttf -o 500 -t 520 > /dev/null
             mv ${FUSION_ID}-${STYLE}-w1040-w520.ttf ${FUSION_ID}-${STYLE}.ttf
             python width.py -f 520 ${FUSION_ID}-${STYLE}.ttf -l -200 -n 30 -a 1040
 
             gftools update-nameids "${FUSION_ID}-${STYLE}.ttf" \
               --uniqueid "$FUSION_ID-$STYLE-$NOW" \
-              --description "$FUSION_DESCRIPTION" \
               --designer "$FUSION_DEVELOPER" \
               --manufacturer "$FUSION_DEVELOPER" \
               --trademark "$FUSION_NAME" \
