不用warFontMerger合并字体

--- a/.github/workflows/custom-build.yml
+++ b/.github/workflows/custom-build.yml
@@ -70,15 +70,15 @@ jobs:
 
       - name: Download Warcarft-Font-Merger
         run: |
-          wget -q https://github.com/nowar-fonts/Warcraft-Font-Merger/releases/download/v1.1.0/WarFontMerger-XS-1.1.0-linux-amd64.tar.xz
-          tar -xvf WarFontMerger-XS-1.1.0-linux-amd64.tar.xz
+          # wget -q https://github.com/nowar-fonts/Warcraft-Font-Merger/releases/download/v1.1.0/WarFontMerger-XS-1.1.0-linux-amd64.tar.xz
+          # tar -xvf WarFontMerger-XS-1.1.0-linux-amd64.tar.xz
 
       - name: Merge font by WarFontMerger
         run: |
-          字体合并补全工具-压缩字库-1.1.0-linux-amd64/otfccdump IosevkaTermSS05NerdFontMono-Regular.ttf -o base.otd
-          字体合并补全工具-压缩字库-1.1.0-linux-amd64/otfccdump LXGWWenKaiMonoLite-Regular.ttf -o cjk.otd
-          字体合并补全工具-压缩字库-1.1.0-linux-amd64/merge-otd base.otd cjk.otd
-          字体合并补全工具-压缩字库-1.1.0-linux-amd64/otfccbuild base.otd -O2 -o IosevkaTermSS05NFM+LXGWWenKaiMonoLite-Regular.ttf
+          # 字体合并补全工具-压缩字库-1.1.0-linux-amd64/otfccdump IosevkaTermSS05NerdFontMono-Regular.ttf -o base.otd
+          # 字体合并补全工具-压缩字库-1.1.0-linux-amd64/otfccdump LXGWWenKaiMonoLite-Regular.ttf -o cjk.otd
+          # 字体合并补全工具-压缩字库-1.1.0-linux-amd64/merge-otd base.otd cjk.otd
+          # 字体合并补全工具-压缩字库-1.1.0-linux-amd64/otfccbuild base.otd -O2 -o IosevkaTermSS05NFM+LXGWWenKaiMonoLite-Regular.ttf
           rm *.otd
 
       - name: Download width.py & fuse_fonts.ff
@@ -111,10 +111,10 @@ jobs:
           python width.py -f 520 IosevkaTermSS05NerdFontMono-Regular.ttf -l -200 -n 30
 
           # Fix merged font.
-          python width.py -m ${FILE_MERGED_WFM}-Regular.ttf -o 1000 -t 1040 > /dev/null
-          python width.py -m ${FILE_MERGED_WFM}-Regular-w1040.ttf -o 500 -t 520 > /dev/null
-          mv ${FILE_MERGED_WFM}-Regular-w1040-w520.ttf ${FILE_MERGED_WFM}-Regular.ttf
-          python width.py -f 520 ${FILE_MERGED_WFM}-Regular.ttf -l -200 -n 30 -a 1040
+          # python width.py -m ${FILE_MERGED_WFM}-Regular.ttf -o 1000 -t 1040 > /dev/null
+          # python width.py -m ${FILE_MERGED_WFM}-Regular-w1040.ttf -o 500 -t 520 > /dev/null
+          # mv ${FILE_MERGED_WFM}-Regular-w1040-w520.ttf ${FILE_MERGED_WFM}-Regular.ttf
+          # python width.py -f 520 ${FILE_MERGED_WFM}-Regular.ttf -l -200 -n 30 -a 1040
 
           for STYLE in "Regular"; do
             python width.py -m ${FUSION_ID}-${STYLE}.ttf -o 1000 -t 1040 > /dev/null
@@ -149,8 +149,8 @@ jobs:
             python width.py -c IosevkaTermSS05NerdFontMono-${STYLE}.ttf >> $GITHUB_ENV
 
             echo "" >> $GITHUB_ENV
-            echo "* ${FILE_MERGED_WFM}-${STYLE}.ttf:" >> $GITHUB_ENV
-            python width.py -c ${FILE_MERGED_WFM}-${STYLE}.ttf >> $GITHUB_ENV
+            # echo "* ${FILE_MERGED_WFM}-${STYLE}.ttf:" >> $GITHUB_ENV
+            # python width.py -c ${FILE_MERGED_WFM}-${STYLE}.ttf >> $GITHUB_ENV
 
             echo "" >> $GITHUB_ENV
             echo "* ${FUSION_ID}-${STYLE}.ttf:" >> $GITHUB_ENV
